Add tetris game(WIP), minor changes to others

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ target_link_libraries(fgampl m)
 add_executable(aud-mod-af "aud-mod-af.c")
 target_link_libraries(aud-mod-af m)
 
+add_executable(caps-blink "caps-blink.c")
 
