--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.20)
 project("Random Scripts")
 
 add_compile_options(-Wall -Wextra -Wshadow -Wnull-dereference -Wformat=2 -pedantic)
+add_compile_options("$<$<CONFIG:Debug>:-fsanitize=address,undefined>")
+add_link_options("$<$<CONFIG:Debug>:-fsanitize=address,undefined>")
 
 add_executable(fgampl harmonics.c)
 target_link_libraries(fgampl m)
